--- a/shubham/package.json
+++ b/shubham/package.json
@@ -3,22 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@heroicons/react": "^2.0.13",
+    "@heroicons/react": "^2.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "framer-motion": "^11.18.2",
     "jsonwebtoken": "^9.0.2",
     "mailtrap": "^3.4.0",
     "mongoose": "^8.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
+    "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^6.7.0",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.9.3",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
@@ -47,12 +53,19 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.17",
     "nodemon": "^3.1.9",
-    "tailwindcss": "^3.2.4"
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "description": "Modern Portfolio Website showcasing skills and projects",
   "main": "tailwind.config.js",
-  "keywords": [],
+  "keywords": [
+    "portfolio",
+    "react",
+    "frontend",
+    "developer"
+  ],
   "author": "",
   "license": "ISC"
 }
