--- a/shubham/package.json
+++ b/shubham/package.json
@@ -23,6 +23,7 @@
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.16.0",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-router-dom": "^6.7.0",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.3",
